🐛 Make sure context menus do not always have scrollbars

--- a/assets/stylesheets/chimera/chimera.scss
+++ b/assets/stylesheets/chimera/chimera.scss
@@ -3,6 +3,10 @@
 
 body {
 	font-family: 'Roboto', sans-serif;
+
+	.he-context-contents {
+		overflow: auto;
+	}
 }
 
 .default-form-editor,
